package org.xtreemfs.pbrpc;
option java_package="org.xtreemfs.babudb.pbrpc";
import "share/foundation/include/Common.proto";
import "share/foundation/include/PBRPC.proto";

message ErrorCodeResponse {
  optional fixed32 error_code = 1[default = 0];
}

message Timestamp {
  optional fixed32 error_code = 1[default = 0];
  optional fixed64 value = 2[default = 0];
}

message DBFileMetaData {
  required string file_name = 1;
  required fixed64 file_size = 2;
}

message DBFileMetaDatas {
  optional fixed32 error_code = 1[default = 0];
  optional fixed32 max_chunk_size = 2[default = 5242880];
  repeated DBFileMetaData db_file_metadatas = 3;
}

message Type {
  required fixed32 value = 1;
}

message LogEntry {
  required fixed64 length = 1;
}

message LogEntries {
  optional fixed32 error_code = 1[default = 0];
  repeated LogEntry log_entries = 2;
}

message LSN {
  required fixed32 view_id = 1;
  required fixed64 sequence_no = 2;
}

message HeartbeatMessage {
  required fixed32 port = 1;
  required LSN lsn = 2;
}

message Chunk {
  required string file_name = 1;
  required fixed64 start = 2;
  required fixed64 end = 3;
}

message LSNRange {
  required LSN start = 1;
  required LSN end = 2;
}

message InetAddress {
  required string host = 1;
  required fixed32 port = 2;
}

message FLease {
  required string host = 1;
  required fixed32 port = 2;
}

message Databases {
  repeated Database database = 1;
}

message Database {
  optional fixed32 error_code = 1[default = 0];
  required string database_name = 2;
  required fixed32 database_id = 3;
}

message DatabaseName {
  required string database_name = 1;  
}

message Lookup {
  required string database_name = 1;
  required fixed32 index_id = 2;
}

message RangeLookup {
  required string database_name = 1;
  required fixed32 index_id = 2;
  required fixed32 from_length = 3;
}

message EntryMap {
  optional fixed32 error_code = 1[default = 0];
  repeated fixed64 length = 2;
}